/*
 * $Id: ChangeLog,v 1.2443 2004/03/02 04:46:54 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-03-01 21:20 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/win32ole.prg
    + added CO_E_SERVER_EXEC_FAILURE support to Ole2TxtError()

2004-03-01 20:56 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
    ! Fixed hb_vmOperatorCall() to not recycle pObjItem for Return Value as it may have been passed BYREF.

  * source/rtl/win32ole.prg
    * Support for ASP collections in Collection Method.

2004-03-01 18:05 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbclass.ch
    % Optimized out indrection handling of Operator Overloading

2004-03-02 04:00 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/common/hbtrace.c
    ! Prevent GPF in hb_tr_trace when under certain conditions hb_tr_level_
      becomes equal to -1.
  * source/debug/tbrwtext.prg
    * Removed unneeded methods commented out by Pritpal.

2004-03-02 01:35 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/contrib/rdd_ads/ads1.c
  * xharbour/source/rdd/dbf1.c
  * xharbour/source/rdd/workarea.c
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    ! changing EOF()/BOF() flags setting to be Clipper compatible in some
      strange situation (empty database, total clear filters, etc. is skip
      and seek operations)
      It has to be extensively check in all RDD because I change some
      workarea behaviors.
    * removed 20 bytes limit for numbers in DBF, now numeric fields
      can have up to 255 bytes

  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    ! fixed bug in FOR filter. It was possible that some keys
      which should be excluded by for expression were added to
      index file.

  * xharbour/tests/rddtest/out.prg
  + xharbour/tests/rddtest/outads.prg
  * xharbour/tests/rddtest/rddmktst.prg