@@ -1,5 +1,5 @@
 /*
- * $Id: hbapifs.h,v 1.31 2004/03/01 05:16:43 andijahja Exp $
+ * $Id: hbapifs.h,v 1.32 2004/03/01 22:00:38 andijahja Exp $
  */
 
 /*
@@ -145,7 +145,7 @@ extern USHORT   HB_EXPORT hb_fsWrite      ( FHANDLE hFileHandle, BYTE * pBuff, U
 extern ULONG    HB_EXPORT hb_fsWriteLarge ( FHANDLE hFileHandle, BYTE * pBuff, ULONG ulCount ); /* write to an open file from a buffer (>64K) */
 extern FHANDLE  HB_EXPORT hb_fsPOpen( BYTE * pFilename, BYTE * pMode );
 extern void     HB_EXPORT hb_fsDirectory( PHB_ITEM Dir, char* szSkleton, char* szAttributes, BOOL bDirOnly, BOOL bFullPath );
-extern void     HB_EXPORT hb_fsDirectoryRecursive( PHB_ITEM Dir, char* szSkleton, char* szFName );
+extern void     HB_EXPORT hb_fsDirectoryRecursive( PHB_ITEM Dir, char* szSkleton, char* szFName, char* szAttributes );
 
 /* Open a child process */
 extern FHANDLE HB_EXPORT hb_fsOpenProcess( char *pFilename, FHANDLE *fhStdin, FHANDLE *fhStdout, FHANDLE *fhStderr, BOOL bBackground );
